ajustes apontados pelo sonarlint